--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,16 @@ jobs:
     env:
       ELIXIR_VERSION: 1.13.4
       OTP_VERSION: 24.2
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: endo_repo
+      POSTGRES_PORT: 5432
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Github repo
         uses: actions/checkout@v3.0.2
       - name: Setup BEAM Env
-        uses: erlef/setup-beam@v1.11.2
+        uses: erlef/setup-beam@v1.15.0
         with:
           otp-version: ${{ env.OTP_VERSION }}
           elixir-version: ${{ env.ELIXIR_VERSION }}
@@ -38,5 +42,6 @@ jobs:
           key: ${{ hashFiles('mix.lock') }}-${{ env.ELIXIR_VERSION }}-${{ env.OTP_VERSION }}
       - if: steps.mix-cache.outputs.cache-hit != 'true'
         run: mkdir -p priv/plts; mix deps.get; mix deps.compile
+      - run: docker-compose up -d
       - run: mix lint
-      - run: mix test
+      - run: MIX_ENV=test mix do ecto.create, ecto.migrate, test
