END-011 - Update CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,22 +15,28 @@ concurrency:
 
 jobs:
   lint-and-test:
+    runs-on: ubuntu-latest
+    name: OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
+    strategy:
+      matrix:
+        include:
+          - otp: "26.1"
+            elixir: "1.15.7"
+          - otp: "24.2"
+            elixir: "1.13.4"
     env:
-      ELIXIR_VERSION: 1.13.4
-      OTP_VERSION: 24.2
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: endo_repo
       POSTGRES_PORT: 5432
-    runs-on: ubuntu-latest
     steps:
       - name: Checkout Github repo
         uses: actions/checkout@v3.0.2
       - name: Setup BEAM Env
-        uses: erlef/setup-beam@v1.15.0
+        uses: erlef/setup-beam@v1.15
         with:
-          otp-version: ${{ env.OTP_VERSION }}
-          elixir-version: ${{ env.ELIXIR_VERSION }}
+          otp-version: ${{matrix.otp}}
+          elixir-version: ${{matrix.elixir}}
       - name: Setup Cache
         uses: actions/cache@v3.0.4
         id: mix-cache
@@ -39,7 +45,7 @@ jobs:
             deps
             _build
             priv/plts
-          key: ${{ hashFiles('mix.lock') }}-${{ env.ELIXIR_VERSION }}-${{ env.OTP_VERSION }}
+          key: ${{ hashFiles('mix.lock') }}-${{ matrix.elixir }}-${{ matrix.otp }}
       - if: steps.mix-cache.outputs.cache-hit != 'true'
         run: mkdir -p priv/plts; mix deps.get; mix deps.compile
       - run: docker-compose up -d
